  Changes:
    - refactor schedule management with new LuaSchedule API
    - add new station type 'fuel station'
    - add new virtual signal 'ltn-fuel-station' to declare a stop to be a fuel station
    - add configuration option 'ltn-schedule-fuel-station' to enable/disable fuel station support
    - add configuration option 'ltn-schedule-reset-interrupts' to enable/disable schedule reset
    - [API] add attribute `is_fuel_station` to `ltn.TrainStop` to show whether this is a fuel station
    - [API] add attribute `fuel_signals` to `ltn.TrainStop` for the fuel conditions added to the refuel interrupt
    - trains will reselect a depot in their network when leaving requester and 'delivery ends at requester' is active
    - Hide LTN internal entities (stop lamp + combinators) from Factoriopedia
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2025-02-27
  Bugfixes:
    - fix crash when renaming a non-LTN entity (e.g. a spidertron). Reported in the mod forum by @Nekrobot, thank you!
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2025-02-26
  Bugfixes:
    - fix typo in dispatcher that caused crashes when recomputing shipmends because of too many stacks
  Changes:
    - Changed default network value from -1 ("all networks") to 0 ("no networks"). This affects any station
      that has no explicit network id signal connected. Rationale for that change is that before this release,
      turning off a connected combinator (LTN or constant combinator) will activate the station for all
      networks instead of turning it off. If your setup relies on the default signal being "-1", set it
      explicitly in the LTN settings.
    - Add a new setting "Requesters ignore stopped trains" that allows ignoring unloading trains when scheduling
      new requests