@@ -175,4 +175,11 @@ data:extend {
         setting_type = 'runtime-global',
         default_value = false,
     },
+    {
+        type = 'bool-setting',
+        name = 'ltn-schedule-reselect-depot',
+        order = 'ef',
+        setting_type = 'runtime-global',
+        default_value = false,
+    },
 }
